app/assets/stylesheets/application/modules/molecules/_billboard.scss
.m-billboard {
  box-shadow: 0 4px 2px -2px $color-box-shadow;
  max-width: 780px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 20px;
  padding-left: 20px;
}

.m-billboard__container {
  @include flex($justify-content: space-between);
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
  padding-top: 20px;

  .a-avatar {
    margin-top: 10px;
  }

  .a-button {
    margin-top: 20px;
    margin-bottom: -20px;
  }

  textarea {
    width: 70%;
  }
}

.m-billboard__container-left {
  width: 65%;
}

.m-billboard__container-right {
  width: 30%;
  align-self: flex-start;

  .a-avatar {
    width: 180px;
    height: 180px;
  }
}

.m-billboard__title {
  font-size: 32px;
  margin: 15px 0 0 -2px;
}

.m-billboard__bio {
  color: $color-dark-grey;
  line-height: 1.4;
  margin-top: 4px;
  margin-bottom: 0;
  width: 100%;

  @media #{$from-medium} {
    width: 75%;
  }
}

.m-billboard__description {
  color: $color-dark-grey;
  margin: 20px 0;

  a {
    color: $color-dark-grey;

    &:hover {
      color: $color-blue;
    }
  }
}

.m-billboard__nav {
  margin-top: 60px;
}

